fix: Redesign footer with cut corner and proper alignment
- Restore original footer design with 90% width and right alignment
- Add cut corner (triangle) design on the left side
- Align footer right edge to viewport edge
- Left padding aligns with logo position (147px)
- Restore margin-left: auto to push footer to the right
- Maintain responsive padding adjustments

--- a/src/Components/Footer/Footer.module.scss
+++ b/src/Components/Footer/Footer.module.scss
@@ -1,11 +1,24 @@
+@import '../../shared/styles/vars';
+
 .root {
     position: relative;
-    width: 100%;
-    max-width: 1440px;
-    margin: 0 auto;
-    padding: 80px 50px 45px;
+    width: 90%;
+    max-width: 1270px;
+    margin-left: auto;
+    padding: 80px 80px 45px 147px;
     background-color: #262626;
 
+    // Cut corner design on the left
+    &::before {
+        content: '';
+        position: absolute;
+        top: 0;
+        left: 0;
+        width: 60px;
+        height: 45px;
+        background: #000000;
+        clip-path: polygon(0 0, 100% 0, 0 100%);
+    }
 
     .navigation,
     .copyright {
@@ -90,11 +103,13 @@
     }
 
     @media screen and (max-width: $laptop) {
-        padding: 80px 30px 45px;
+        width: 95%;
+        padding: 80px 60px 45px 120px;
     }
 
     @media screen and (max-width: $tablet) {
-        padding: 60px 20px 40px;
+        width: 100%;
+        padding: 60px 40px 40px 80px;
 
         .navigation {
             flex-direction: column;
@@ -102,6 +117,6 @@
     }
 
     @media screen and (max-width: $mobile) {
-        padding: 40px 20px 30px;
+        padding: 40px 30px 30px 60px;
     }
 }
